fixed weights on mobile, added real project descrrptions, linked code and live versions

--- a/src/style/AboutMe/AboutMe.css
+++ b/src/style/AboutMe/AboutMe.css
@@ -110,9 +110,11 @@
         grid-template-rows: 1fr 1fr;
         min-height: 540px;
     }
-
+    .aboutme-left {
+        justify-items: center;
+    }
     .aboutme-description {  
-        width: 100%;
+        width: 80%;
         top: 0px;
     }
 
