--- a/src/style/Contact/Contact.css
+++ b/src/style/Contact/Contact.css
@@ -89,7 +89,6 @@
 
     .contactme-logo {
         bottom: unset;
-        left: 50px;
         right: unset;
         top: 80px;
     }
