--- a/src/style/MyProjects/Preview.css
+++ b/src/style/MyProjects/Preview.css
@@ -9,8 +9,6 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-
-
 .my-projects-preview .rec {
     background-color: white;
     width: 70%;
@@ -36,6 +34,16 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
+}
+
+.prev-icons a,
+span {
+    text-decoration: none;
+    color: black
+}
+
+.prev-icons i {
+    color: #FD85FF;
 }
 
 .project-idea {
