--- a/src/style/MyProjects/ProjectList.css
+++ b/src/style/MyProjects/ProjectList.css
@@ -171,6 +171,7 @@
 
     .mobile .test .white-rec {
         height: 70%;
+        font-size: 13px;
     }
 }
 
